--- a/templates/lop.html
+++ b/templates/lop.html
@@ -769,6 +769,236 @@ nav {
 
         </style>
     </head>
+<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<script src="static/js/jquery-1.11.3.js" type="text/javascript" charset="utf-8"></script>
+	<script src="static/js/index_jquey.js" type="text/javascript" charset="utf-8"></script>
+	<script src="static/js/mian.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" src="static/js/indexData.js"></script>
+	<script type="text/javascript" src="static/js/jquery.js"></script>
+	<script type="text/javascript" src="static/js/index.js"></script>
+
+	<link rel="stylesheet" type="text/css" href="static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="static/css/reset.css">
+
+	<link rel="stylesheet" type="text/css" href="static/css/nav.css">
+	<link rel="stylesheet" type="text/css" href="static/css/fixedMenu.css">
+	<link rel="stylesheet" type="text/css" href="static/css/base.css">
+	<link rel="shortcut icon" href="static/img/index/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="static/css/index_1.css">
+<!-- 	<link rel="stylesheet" type="text/css" href="static/css/footer.css"> -->
+
+
+	<title>想喝大可乐</title>
+    	<nav class="nav">
+			<div class="nav_black">
+					<ul class="nav_black_left">
+						<li><a href="https://www.coca-cola.com.cn/" target="_blank">大可乐</a></li>
+						<li>|</li>
+						<li><a href="">可乐</a></li>
+						<li>|</li>
+						<li><a href="">雪碧</a></li>
+						<li>|</li>
+						<li><a href="">脉动</a></li>
+						<li>|</li>
+						<li><a href="">尖叫</a></li>
+						<li>|</li>
+						<li><a href="">农夫山泉</a></li>
+						<li>|</li>
+						<li><a href="">陈泓钇</a></li>
+						<li>|</li>
+						<li><a href="">硫酸</a></li>
+						<li>|</li>
+						<li><a href="">问题反馈</a></li>
+						<li>|</li>
+						<li><a href="">Select Region</a></li>
+						<div class="clear"></div>
+					</ul>
+
+				<div class="nav_black_right">
+					<div class="fr" id="user_mess">
+						<ul>
+                            	<li><a href="/cal_sub" style="color: red"   id="shopping_num">\__/***购物车（0）</a></li>
+							<li><a href="">消息通知</a></li>
+							<li>|</li>
+							<li><a  href="/regrist" role="button">注册</a></li>
+							<li>|</li>
+							<li><a  href="/login" >登录</a></li>
+						</ul>
+					</div>
+				</div>
+
+
+
+			</div>
+	</nav>
+
+</head>
+
+
+
+	<div id="gouwuchebox">
+		<p>这里什么都没有~</p>
+	</div>
+	<!-- navigation -->
+<!--标题栏  -->
+<!--标题栏结束-->
+
+
+<!-- banner -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<!-- 开始主体 -->
+
+
+<!-- 手机 -->
+
+
+
+
+<head>
+	<meta charset="UTF-8">
+	<title>物品详情页</title>
+	<link rel="stylesheet" type="text/css" href="/static/css/base.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/nav.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/footer.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/fixedMenu.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/goodsDetails.css">
+
+	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"> </script>
+
+</head>
+<body>
+	<header id="header" class="t">
+
+		<!-- ><nav id="navBottom" class="t">
+			<div id="navBottomC" class="c">
+				<section id="search">
+						<input type="text" id="searchBox" value="serch" >
+						<a href="" title=""><i id="searchBtn"></i></a>
+					</section>
+			</div-->
+			<!-- 二级菜单 >
+		</nav><-->
+	</header><!-- /header -->
+
+
+
+	<section id="fixedMune" class="t">
+		<a id="goTop" class="fixedMuneLinks" href="#" title="">
+			<i class="fixedMuneTips">返回顶部</i>
+		</a>
+        <a  class="goods_id" id="{{ data}}">{{ data }}</a>
+	</section>
+</body>
+     <div id='inputbox' class="box" style="display: none;">
+
+         <div id="pinja" style="text-align: center;height: 20px;">
+             <textarea id="ttt" style="margin-left:10px ;margin-right: 10px"></textarea>
+         </div>
+         <div style="margin-top: 250px">
+             <a id="submit_pingjia">jn</a>
+         <a class='x'  onclick="msgbox(0); return false;">关闭</a>
+         </div>
+
+     </div>
+</html>
+    <style>
+        #inputbox {
+    text-align: center;
+    background-color: #fff;
+    border-radius: 20px;
+    width: 500px;
+    height: 350px;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+}
+    </style>
+
+
+    <script>
+
+ $.ajax({
+
+ 			url: "/check_login",
+            type: "get",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+success: function (data) {
+
+if (data.mess == 'ok') {
+	var m = '<ul>'+
+             '<li><a href="/cal_sub" style="color: red"  id="shopping_num">\\__/***购物车（0）</a></li>'+
+	'<li><a href="">消息通知</a></li>'+
+	'<li>|</li>'+
+	'<li>'+'<a href="/logout">注销</a>'+'</l' +
+        '' +
+        'i>'+
+	'<li>|</li>'+
+	'<li><a  href="/login" >欢迎'+ data.username+'</a></li>'+
+
+	'</ul>';
+	document.getElementById("user_mess").innerHTML = m;
+}
+else{
+
+}
+
+}
+
+})
+
+
+        function msgbox(n){
+
+            document.getElementById('inputbox').style.display=n?'block':'none';     /* 点击按钮打开/关闭 对话框 */
+        }
+
+
+
+        $(".zoomToolbtnPic").live('mousemove',function () {
+
+             var dfo ='<img src="'+$(this).attr("src").toString()+'"  > <div id="square"></div>';
+
+					document.getElementById("originalPicBox").innerHTML =  dfo;
+
+        })
+      function change() {
+alert($(this).html())
+      }
+      var data =  {};
+    data["goods_id"] = $(".goods_id").attr("id").toString();
+
+
+
+
+
+
+    </script>
 
     <body>
         <div id="header"></div>
@@ -835,8 +1065,10 @@ nav {
             dataType: "json",
              success:function(data){ //后端返回的json数据（此处data为json对象）
                 if(data.mess=='ok') {
+
                     th.parent().parent().remove();
                     app();
+                    get_shop_num()
                 }
 
               else
@@ -872,6 +1104,7 @@ nav {
                     dataType: "json",
                      success:function(data){ //后端返回的json数据（此处data为json对象）
                         if(data.mess=='ok') {
+                            get_shop_num()
                             var num =  parseInt(th.parent().find("input").attr("value").toString())-1;
 
                             th.parent().find("input").replaceWith('<input class="goods_num" type="text" value="'+num+'">');
@@ -923,6 +1156,7 @@ nav {
                     dataType: "json",
                      success:function(data){ //后端返回的json数据（此处data为json对象）
                         if(data.mess=='ok') {
+                            get_shop_num()
                             var num =  parseInt(th.parent().find("input").attr("value").toString())+1;
 
                             th.parent().find("input").replaceWith('<input class="goods_num" type="text" value="'+num+'">');
@@ -960,6 +1194,9 @@ nav {
             dataType: "json",
             success: function (data) { //后端返回的json数据（此处data为json对象）
               if (data.mess=='ok') {
+
+
+
 
                   for (var i = 0; i < data.data.length; i++) {
 
@@ -1091,6 +1328,40 @@ if (allCheckNum == checkedNum) {
         $("#zongjia").replaceWith('<span  id="zongjia">'+num+'</span>');
 
 
+    }
+    var shopping_num='0'
+    function change_shopping_num() {
+
+        $("#shopping_num").replaceWith('<a href="/cal_sub" style="color: red"  id="shopping_num">\\__/***购物车（'+shopping_num+
+            '）</a>')
+    }
+    get_shop_num()
+    function get_shop_num() {
+        $.ajax({
+
+ 			url: "/get_shop_num",
+            type: "get",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+success: function (dat) {
+
+if (dat.mess == 'ok') {
+    if(dat.num != "None")
+    {
+        shopping_num = dat.num
+    }
+    else {
+        shopping_num = "0"
+    }
+    change_shopping_num()
+}
+else{
+
+}
+
+}
+
+})
     }
 
 </script>
